2008-11-13 yusei
* Start to develop version 5.4.

2008-10-24 yusei
* Use translation of payment_mode category in the journal dialog.

2008-10-24 yusei
* Use translated role name in entity_role field in third party report.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-16 Kazuhiko
* remove payment_transaction_builder because now it is included in erp5_invoicing.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Purchase Invoice Transaction and Sale Invoice Transaction.

2008-09-07 yusei
* Replace "+" with " " in translation messages.

2008-09-04 jerome
* Add profile tab on all accounting transaction types

2008-09-04 yusei
* Update English messages

2008-09-03 yusei
* Remove text which is not suitable for translation.

2008-08-29 yusei
* Replace abbreviation in action title.

2008-08-28 yusei
* Use translateString or Base_translateString instead of N_ for translation message.

2008-07-02 yusei
* Update title of Account_view.reference.
In accounting, reference is "Document Reference", but, in account, reference must be "Reference".

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-03 vincentd
* Add all rights for manager in the invoice_causality_workflow(Solving)

2008-06-03 vincentd
* Change manager security for account_workflow, accounting_period_workflow and accounting_workflow.

2008-05-16 jerome
* Introduce scripts to help report creation.

2008-05-14 jerome
* Use absolute_url when necessary to produce URLs compatible with virtual hosting.

2008-04-19 yo
* Bump to 5.0.

2008-3-4 jerome
* add a fast input to group accounting lines from invoice and corresponding payment.

2008-2-25 jerome
* change accounting_period_workflow: Assignee can start / stop accounting periods, but only Assignor can close it definitely. Also make it possible to cancel openned period, and to delete a draft period.

2008-2-14 jerome