@@ -1,3 +1,6 @@
+2009-02-06 yo
+* Stop raising an exception, even if the credit is not equal to the debit in a built delivery, in the post processing script, because the builder may not blindly adopt prevision when updating existing lines, thus it can be unbalanced.
+
 2008-11-13 yusei
 * Start to develop version 5.4.
 
